# linkpouch

./: .env.example  .gitignore  AGENTS.md  DEV_PROCEDURES.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_SECURITY.md  README.md  ROADMAP March.md  ROADMAP.md  atlas.hcl  docker-compose.yml  mise.toml  renovate.json
.claude/commands/: deploy.md  deslopify.md  java-spring-hexagonal-ddd.md
.github/workflows/: build-all.yml  build-api-gateway.yml  build-container.yml  build-frontend.yml  build-indexer-service.yml  build-stash-service.yml
config/: seaweedfs-s3.json
deploy/: README.md  local.sh
docs/: ARCHITECTURE.md  INCIDENT_2026-02-27.md  KUBERNETES_DEPLOYMENT.md  TODOS.md  authentication-flow.md  oauth-setup.md
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  changelog.ts  features.ts  index.css
k8s/: namespace.yaml  network-policies.yaml
k8s/api-gateway/: configmap.yaml  deployment.yaml  service.yaml
k8s/frontend/: deployment.yaml
scripts/: build-arm64.sh  deploy-k8s.sh
services/indexer-service/: Dockerfile  README.md  pyproject.toml
services/indexer-service/proto/: stash_indexer.proto
services/indexer-service/src/: __init__.py  main.py
services/indexer-service/src/config/: settings.py
services/indexer-service/src/services/: ai_client.py  proxy_manager.py  redis_consumer.py  scraper.py  stash_client.py  storage_service.py
services/indexer-service/src/services/proxy_sources/: __init__.py  base.py  iplocate.py  proxifly.py  proxy_list_world.py
(+409 files in other folders)
